IVN-8592 Upgrade to hibernate 6, jakarta EE 10. only copy command not the  extra annotations. Unit testing with test containers.